2017-11-24 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-74: Bug fix for python/Subsystem/__init__.py files
	when packages are deleted.
        https://github.com/cms-sw/cmssw-config/blob/master/SCRAM/GMake/Makefile.rules#L2443
        https://hypernews.cern.ch/HyperNews/CMS/get/recoDevelopment/1558.html

2017-11-14 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-73: Added TSAN IBs.

2017-11-11 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-72: Disabled ASAN alloc_dealloc_mismatch check.

2017-11-10 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-71: Get Cuda device link options from CUDA_FLAGS instead of
	hardcoding then in build rules

2017-11-09 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-70: Added support for UBSAN IBs
	Added support for lib types

2017-10-31 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
	* V05-05-56: Allow to set overrideable flags via tools instead of
	updating cmssw/self.xml
	- For now hard-code -lcuda-devrt for cuda device link step see
	https://github.com/cms-sw/cmsdist/pull/3543#issuecomment-340669814

2017-10-30 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-51: Treat CUDA_FLAGS CUDA_CFLAGS CUDA_LDFLAGS flags the same
	way we treat other compilers flags.
	Build rules cleanup.
	updates for ASAN Build
	* V05-05-52: Use EDM_TOOLS_PREFIX for edm plugin refresh and edm plugin
	transient checks
	* V05-05-53: Fix for overrideable flags in BuildFile
	* V05-05-54: Drop CUDA_CFLAGS flag instead use CXXFLAGS for
	compiler-options
	* V05-05-55: Drop -g for asan build to redeuce the size of cmssw package
	with -g the cmssw rpm is 8.9G which hit the internal rpm size limits (int overflow)

2017-10-24 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-50: Added cuda device link steps for cuda sources

2017-10-12 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V05-05-42: Bug fix with SKIP_TOOL_SYMLINKS flags for tools

2017-10-05 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
