@@ -1,3 +1,7 @@
+2018-02-20 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
+	* V05-05-75: Use the library name set in
+	<export><lib name="libname"/></export>.
+
 2017-11-24 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
 	* V05-05-74: Bug fix for python/Subsystem/__init__.py files
 	when packages are deleted.
